--- a/public/login.html
+++ b/public/login.html
@@ -67,17 +67,24 @@
             box-shadow: 0 4px 15px rgba(0, 91, 187, 0.3);
         }
 
+        .error-message {
+            color: red;
+            margin-top: 15px;
+            font-size: 14px;
+            display: none; 
+        }
 
     </style>
 </head>
 <body>
     <div class="container">
-        <h1>Вход в админ панель</h1>
+        <h1>Sign In</h1>
         <form id="loginForm">
             <input type="text" id="username" placeholder="User Name" required>
             <input type="password" id="password" placeholder="Password" required>
             <button type="submit">Sign In</button>
         </form>
+        <p class="error-message" id="errorMessage">Incorrect username or password.</p>
     </div>
 
     <script>
@@ -86,9 +93,9 @@
 
             const username = document.getElementById('username').value;
             const password = document.getElementById('password').value;
+            const errorMessage = document.getElementById('errorMessage');
 
-            
-            fetch('http://localhost:5000/login', {
+            fetch('http://localhost:3000/login', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
@@ -97,14 +104,16 @@
             })
             .then(response => {
                 if (response.ok) {
-                    
-                    window.location.href = 'http://localhost:5000/admin';
+                    errorMessage.style.display = 'none';
+                    window.location.href = '/admin'; 
                 } else {
-                    alert('Incorrect username or password');
+                    errorMessage.style.display = 'block';
                 }
             })
             .catch(error => {
                 console.error('Error:', error);
+                errorMessage.innerText = 'There was an error trying to sign in. Please try again..';
+                errorMessage.style.display = 'block';
             });
         });
     </script>
